Transform mviewer to mviewer-app component

--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
         <title>MVIEWER</title>
     </head>
     <body>
-      <mviewer>
-        <script src="./index.js"></script>
-      </mviewer>
+      <mviewer-app></mviewer-app>
+      <script src="./index.js"></script>
   </body>
 </html>
